UPIM/rcsdk.h

/*
jobj
{
"result":"falied/success",
"err_code":0/1,	//操作结果 0-成功 非0-失败
"msgUId":"",
"timestamp":12345
}
*/
typedef void(__stdcall *PublishAckListenerCallback)(const wchar_t* json_str);
/*
jobj
{
"result":"falid/success",
"userId":"7788",					//用户id
"err_code":0/1,						//错误码 0-成功 1-失败
"userName":"1122"					//用户名称
"userPortrait" : "9988"				//用户头像
}
*/
typedef void(__stdcall *UserInfoListenerCallback)(const wchar_t* json_str);
/*
jobj
{
"opStatus":0,		//操作结果    0-成功 非0-失败
"bizStatus":0		//业务数据值  根据具体业务返回响应的业务数据值
}
*/
typedef void(__stdcall *BizAckListenerCallback)(const wchar_t* json_str);
/*
jobj
{
"process": 7  //进度值
}
jobj
{
"result":"falid/success",
"url":"http//....",             //信息描述 成功，返回图片uri 失败 返回错误描述
"err_code":0/1					//错误码 0 - 成功 非0 - 失败
}
*/
typedef void(__stdcall *ImageListenerCallback)(const wchar_t* json_str);
/*
jobj
{
"m_TargetId":"99",          //交互方id
"m_SenderId": "" ,          //发方id
"m_ClazzName":"",		    //类别
"m_ExtraMessage":"",        //信息
"m_ExtraMessage":"",        //附加信息
"m_Push":"",                //推送消息
"m_AppData":"",             //AppData
"m_ConversationType":0,     //通道类型  1-PRIVATE 2-DISCUSSION 3-GROUP 4-CHATROOM 5-CUSTOMSERVICE
"m_MessageId":9,            //消息id   消息在数据库中的id号
"m_Direction":0,            //消息方向  0-发送的消息 1-接收的消息
"m_ReadStatus":0,           //读取状态  0-未读 1-已读
"m_SendStatus":20,          //发送状态  10-发送中 20-发送失败 30-发送成功
"m_SendTime":9,             //接收时间
"m_RcvTime":9,              //接收时间
"m_MessageType":0		    //信息类别  0-实时接收信息 1-历史漫游
}
*/
typedef void(__stdcall *MessageInfoCallback)(const wchar_t* json_str);
/*
jobj
{
ConversationInfo
{
"m_TargetId":"99",          //会话id
"m_Title": "" ,             //回话标题
"m_Draft":"",               //会话草稿
"m_ConversationType":9,     //会话类型 单聊 群聊 讨论组 。。。
"m_IsTop":9,                //会话是否置顶
"m_BlockPush":9,            //是否要push消息
"m_GroupStatus":9,          //讨论组状态
"m_UnreadCount":9,          //未读消息数
"m_LastTime":9,             //最近会话时间
}
CMessageInfo
{
"m_SenderId": "" ,          //发方id
"m_ClazzName":"",		    //类别
"m_Push":"",                //推送消息
"m_AppData":"",             //AppData
"m_ConversationType":0,     //通道类型  1-PRIVATE 2-DISCUSSION 3-GROUP 4-CHATROOM 5-CUSTOMSERVICE
"m_MessageId":9,            //消息id   消息在数据库中的id号
"m_Direction":0,            //消息方向  0-发送的消息 1-接收的消息
"m_ReadStatus":0,           //读取状态  0-未读 1-已读
"m_SendStatus":20,          //发送状态  10-发送中 20-发送失败 30-发送成功
"m_SendTime":9,             //接收时间
"m_RcvTime":9,              //接收时间
"m_MessageType":0		    //信息类别  0-实时接收信息 1-历史漫游
}
UserInfo
{
"m_Id":"99",                //用户id
"m_Name": "" ,              //用户名
"m_Portrait":"",            //用户url
"m_AccountExtra":"",        //用户account
"m_categoryId":9,           //类别id
"m_BlockPush":9,            //新消息通知阻止状态 0 - 未阻止 100 - 阻止
}
*/
typedef void(__stdcall *ConversationInfoCallback)(const wchar_t* json_str);
/*
jobj
{
"m_TargetId":"99",          //交互方id
"m_SenderId": "" ,          //发方id
"m_ClazzName":"",		    //类别
"m_Push":"",                //推送消息
"m_AppData":"",             //AppData
"m_ConversationType":0,     //通道类型  1-PRIVATE 2-DISCUSSION 3-GROUP 4-CHATROOM 5-CUSTOMSERVICE
"m_MessageId":9,            //消息id   消息在数据库中的id号
"m_Direction":0,            //消息方向  0-发送的消息 1-接收的消息
"m_ReadStatus":0,           //读取状态  0-未读 1-已读
"m_SendStatus":20,          //发送状态  10-发送中 20-发送失败 30-发送成功
"m_SendTime":9,             //接收时间
"m_RcvTime":9,              //接收时间
"m_MessageType":0		    //信息类别  0-实时接收信息 1-历史漫游
}
*/
typedef void(__stdcall *MessageListenerCallback)(const wchar_t* json_str);
/*
jobj
{
"m_Id":"99",                //用户id
"m_Name": "" ,              //用户名
"m_Portrait":"",            //用户url
"m_AccountExtra":"",        //用户account
"m_categoryId":9,           //类别id
"m_BlockPush":9,            //新消息通知阻止状态 0 - 未阻止 100 - 阻止
}
*/
typedef void(__stdcall *UserInfoCallback)(const wchar_t* json_str);
/*
jobj
{
"length":1,
"data":"hello"
}
*/
typedef void(__stdcall *DataBufferCallback)(const wchar_t* json_str);
	/**
	*  信息入库
	*
	*  @param targetId   交互方id
	*  @param categoryId 通道类型
	*  @param clazzName  消息类别
	*  @param senderId   发送方id
	*  @param message    消息内容
	*  @param driection = false 使用 m_userId作为senderId 当发送消息时 true 不使用 m_userId 做senderId
	*  @param readStatus = 0
	*  @return 信息在库中的id -1 失败 >0 成功
	*/

	WIN_RCSDK_API long SaveMessage(const char* targetId, int categoryId, const char* clazzName, const char* senderId, const wchar_t* message, const char* push, const char* appData, bool driection = false, int readStatus = 0);
	/**
	*  设置草稿
	*
	*  @param targetId     交互方id
	*  @param categoryId   通道类型
	*  @param draftMessage 草稿内容 NULL - 清除草稿 非NULL - 设置草稿
	*
	*  @return 操作结果 true - 成功 false - 失败
	*/
	WIN_RCSDK_API bool SaveTextMessageDraft(const char* targetId, int categoryId, const char* draftMessage);
	/**
	*  获取草稿
	*
	*  @param targetId     交互方id
	*  @param categoryId   通道类型
	*  @param callback	   草稿内容回调函数
	*
	*  @return 操作结果 true - 成功 false - 失败
	*/
	WIN_RCSDK_API bool GetTextMessageDraft(const char* targetId, int categoryId, DataBufferCallback callback);
	
	/**
	*  设置会话置顶
	*
	*  @param targetId   交互方id
	*  @param categoryId 通道类型
	*  @param bTop       是否置顶 true - 置顶 false - 取消置顶
	*
	*  @return 操作结果 true - 成功 false - 失败
	*/
	WIN_RCSDK_API bool SetConversationToTop(const char* targetId, int categoryId, bool bTop);
	/**
	*  删除消息
	*
	*  @param targetId   交互方id
	*  @param categoryId 通道类型
	*
	*  @return 操作结果 true - 成功 false - 失败
	*/
	WIN_RCSDK_API bool ClearMessages(const char* targetId, int categoryId);
	/**
	*  删除某个会话
	*
	*  @param targetId   交互方id
	*  @param categoryId 通道类型
	*
	*  @return 操作结果 true - 成功 false - 失败
	*/
	WIN_RCSDK_API bool RemoveConversation(const char* targetId, int categoryId);
	/**
	*  清除会话消息的未读状态
	*
	*  @param targetId   交互方id
	*  @param categoryId 通道类型
	*
	*  @return 操作结果 true - 成功 false - 失败
	*/
	WIN_RCSDK_API bool ClearMessagesUnreadStatus(const char* targetId, int categoryId);
	/**
	* 根据会话类型的目标 Id，回调方式获取某消息类型标识的N条历史消息记录。
	*
	* @param targetId			目标 Id。根据不同的  categoryId，可能是用户 Id、讨论组 Id、群组 Id 或聊天室 Id。
	* @param categoryId			会话类型。不支持传入 categoryId.CHATROOM。
	* @param recordTime         从该时间点开始获取消息。即：消息中的 sentTime；第一次可传 0，获取最新 count 条。
	* @param rowCount			要获取的消息数量，最多 20 条。
	* @param callback			获取历史消息记录的回调，按照时间顺序从新到旧排列。
	*/

	WIN_RCSDK_API bool GetRemoteHistoryMessage(const char* targetId, int categoryId, int64_t recordTime, int rowCount, MessageListenerCallback callback);
	/**
	* 订阅公共服务账号
	*
	* @param targetId			目标 Id。根据不同的  categoryId，可能是用户 Id、讨论组 Id、群组 Id 或聊天室 Id。
	* @param categoryId			会话类型。不支持传入 categoryId.CHATROOM。
	* @param subscribe			true-订阅 false-解订阅
	* @param callback			监听是否成功
	*/
	WIN_RCSDK_API void SubscribePublicService(const char* targetId, int categoryId, bool subscribe, PublishAckListenerCallback callback);
	/**
	*  @param targetId   交互方id
	*  @param categoryId 通道类型
	*  @param clazzname    消息类别(RC:ImgMsg RC:VcMsg RC:NtfMsg RC:StMsg)
	*  @param lastId     消息id
	*  @param count      选取消息条数
	*  @param callback     json结构的消息列表
	*
	*  @return 操作结果 true - 成功 false - 失败
	*/
	WIN_RCSDK_API bool GetHistoryMessages(const char* targetId, int categoryId, const char* clazzName, long lastId, int count, MessageInfoCallback callback);
	
	/**
	*  获取最近的会话列表
	*
	*  @param conversationDict	通道类型
	*  @param conversationCount 数目
	*  @param callback			json结构的会话列表
	*
	*  @return 操作结果 true - 成功 false - 失败
	*/
	WIN_RCSDK_API bool GetConversationList(int conversationDict[], int conversationCount, ConversationInfoCallback callback);
	/**
	*  获取最近的某类信息的会话列表
	*
	*  @param targetId   交互方id
	*  @param categoryId 通道类型
	*  @param callback     json结构的会话列表
	*
	*  @return 操作结果 true - 成功 false - 失败
	*/
	WIN_RCSDK_API bool GetConversation(const char* targetId, int categoryId, ConversationInfoCallback callback);
	/**
	*  获取未读消息数
	*
	*  @return >=0 未读信息条数-客服未读数 -1 数据库未初始化
	*/
	WIN_RCSDK_API int GetTotalUnreadCount();
	/**
	*  获取未读信息数
	*
	*  @param targetId   交互方id
	*  @param categoryId 通道类型
	*
	*  @return >=0 未读消息数目 -1 数据库未初始化
	*/
	WIN_RCSDK_API int GetUnreadCount(const char* targetId, int categoryId);
	/**
	*  获取未读信息数
	*
	*  @param conversationDict  通道类型数组
	*  @param conversationCount 数组元素个数
	*
	*  @return >=0 未读消息数目 -1 数据库未初始化
	*/
	WIN_RCSDK_API int GetConversationUnreadCount(int conversationDict[], int conversationCount);
	/**
	*  设置阻止push信息
	*
	*  @param targetId   交互方id
	*  @param categoryId 通道类型
	*  @param block      是否阻止 true - 阻止 false - 取消阻止
	*  @param callback   监听器 推送值：0-未阻止 100-已阻止
	*/
	WIN_RCSDK_API void SetConversationNotificationStatus(const char* targetId, int categoryId, bool block, BizAckListenerCallback callback);
	/**
	*  获取阻止状态
	*
	*  @param targetId    交互方id
	*  @param categoryId  通道类型
	*  @param fetchRemote 是否从服务器获取 true - 服务器 false - 本地
	*  @param callback    监听器 推送值：0-未阻止 100-已阻止
	*/
	WIN_RCSDK_API void GetConversationNotificationStatus(const char* targetId, int categoryId, BizAckListenerCallback callback);
	/**
	*  获取用户信息 (请求服务器来获取用户信息)
	*
	*  @param userId      用户id
	*  @param callback    监听器 推送：用户id 用户名称 用户url
	*/
	WIN_RCSDK_API void GetUserInfo(const char* userId, UserInfoListenerCallback callback);
	/**
	*  获取用户信息 (本地数据库来获取用户信息)
	*/
	WIN_RCSDK_API bool GetUserInfoExSync(const char* userId, int category_id, UserInfoCallback callback);
	//清空所有会话及会话消息，回调方式通知是否清空成功
	WIN_RCSDK_API bool ClearConversations(int conversationDict[], int conversationCount);
	/*
	************************************************
	*  单条信息处理函数
	************************************************
	*/

	/**
	*  删除消息
	*
	*  @param messageId    消息id数组
	*  @param messageCount 消息数组数目
	*
	*  @return 操作结果：true - 成功 false - 失败
	*/
	WIN_RCSDK_API bool DeleteMessage(long messageId[], int messageCount);
	/**
	*  设置消息内容
	*
	*  @param messageId 消息id
	*  @param content   消息内容
	*
	*  @return 操作结果：true - 成功 false - 失败
	*/
	WIN_RCSDK_API bool SetMessageContent(long messageId, const char* content);
	/**
	*  设置附加信息
	*
	*  @param messageId    消息id
	*  @param extraMessage 附加信息内容
	*
	*  @return 操作结果：true - 成功 false - 失败
	*/
	WIN_RCSDK_API bool SetMessageExtra(long messageId, const char* extraMessage);
	/**
	*  设置消息读取状态
	*
	*  @param messageId  消息id
	*  @param readStatus 消息读取状态 0 - 未读 1 - 已读
	*
	*  @return 操作结果：true - 成功 false - 失败
	*/
	WIN_RCSDK_API bool SetMessageReadStatus(long messageId, int readStatus);
	/**
	*  设置消息发送状态
	*
	*  @param messageId  消息id
	*  @param readStatus 消息读取状态 10 - 发送中 20 - 发送失败 30 - 发送成功
	*
	*  @return 操作结果：true - 成功 false - 失败
	*/
	WIN_RCSDK_API bool SetMessageSendStatus(long messageId, int sendStatus);
	/**
	*  获取本地时间与服务器时间的差值
	*
	*  @return 差值 = 本地时间 - 服务器时间
	*/
	WIN_RCSDK_API int64_t GetDeltaTime();
	/*
	************************************************
	*  文件处理函数
	************************************************
	*/

	/**
	*  上传文件
	*
	*  @param targetId   交互方id
	*  @param categoryId 通道类型
	*  @param nType      媒体类型 1 - Image 2 - Audio 3 - Video
	*  @param pbData     媒体数据
	*  @param nl         数据长度
	*  @param callback  图片监听器 推送：process_callback 进度 操作结果：成功 callback推送网络地址 失败 失败原因
	*/
	WIN_RCSDK_API void UpLoadFile(const char* targetId, int categoryId, int nType, const unsigned char* pbData, long nl, ImageListenerCallback callback,ImageListenerCallback process_callback);