Other/IMCRM.ClientDemo/SDK/rcsdk.cs


        /**
         *  信息入库
         *
         *  @param targetId   交互方id
         *  @param categoryId 通道类型
         *  @param clazzName  消息类别
         *  @param senderId   发送方id
         *  @param message    消息内容
         *  @param driection = false 使用 m_userId作为senderId 当发送消息时 true 不使用 m_userId 做senderId
         *  @param readStatus = 0
         *  @return 信息在库中的id -1 失败 >0 成功
         */
        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int SaveMessage(string targetId, int categoryId, string clazzName, string senderId, [MarshalAs(UnmanagedType.LPWStr)] string message, string push, string appData, bool driection, int readStatus);

        /**
        *  设置草稿
        *
        *  @param targetId     交互方id
        *  @param categoryId   通道类型
        *  @param draftMessage 草稿内容 NULL - 清除草稿 非NULL - 设置草稿
        *
        *  @return 操作结果 true - 成功 false - 失败
        */
        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool SaveTextMessageDraft(string targetId, int categoryId, string draftMessage);

        /**
        *  获取草稿
        *
        *  @param targetId     交互方id
        *  @param categoryId   通道类型
        *  @param draftMessage 草稿内容
        *
        *  @return 操作结果 true - 成功 false - 失败
        */
        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool GetTextMessageDraft(string targetId, int categoryId, DataBufferEventHander callback);

        /**
        *  设置会话置顶
        *
        *  @param targetId   交互方id
        *  @param categoryId 通道类型
        *  @param bTop       是否置顶 true - 置顶 false - 取消置顶
        *
        *  @return 操作结果 true - 成功 false - 失败
        */
        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool SetConversationToTop(string targetId, int categoryId, bool bTop);

        /**
        *  删除消息
        *
        *  @param targetId   交互方id
        *  @param categoryId 通道类型
        *
        *  @return 操作结果 true - 成功 false - 失败
        */
        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ClearMessages(string targetId, int categoryId);

        /**
        *  删除某个会话
        *
        *  @param targetId   交互方id
        *  @param categoryId 通道类型
        *
        *  @return 操作结果 true - 成功 false - 失败
        */
        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool RemoveConversation(string targetId, int categoryId);

        /**
        *  清除会话消息的未读状态
        *
        *  @param targetId   交互方id
        *  @param categoryId 通道类型
        *
        *  @return 操作结果 true - 成功 false - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ClearMessagesUnreadStatus(string targetId, int categoryId);


        /**
	    * 根据会话类型的目标 Id，回调方式获取某消息类型标识的N条历史消息记录。
	    *
	    * @param targetId			目标 Id。根据不同的  categoryId，可能是用户 Id、讨论组 Id、群组 Id 或聊天室 Id。
	    * @param categoryId			会话类型。不支持传入 categoryId.CHATROOM。
	    * @param recordTime         从该时间点开始获取消息。即：消息中的 sentTime；第一次可传 0，获取最新 count 条。
	    * @param rowCount			要获取的消息数量，最多 20 条。
	    * @param callback			获取历史消息记录的回调，按照时间顺序从新到旧排列。
	    */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool GetRemoteHistoryMessage(string targetId, int categoryId, System.Int64 recordTime, int rowCount, MessageListenerEventHandler callback);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SubscribePublicService(string targetId, int categoryId, bool subscribe, PublishAckListenerEventHandler callback);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DownloadAccounts();

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool LoadAccountInfo(AccountInfoEventHandler callback);

        /**
        *  获取分页消息，result需要在外面delete
        *
        *  @param targetId   交互方id
        *  @param categoryId 通道类型
        *  @param lastId     消息id
        *  @param count      选取消息条数
        *  @param result     json结构的消息列表
        *
        *  @return 操作结果 true - 成功 false - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool GetHistoryMessages(string targetId, int categoryId, string clazzName, int lastId, int count, MessageInfoEventHandler callback);
        /**
        *  获取最近的会话列表
        *
        *  @param conversationDict 通道类型
        *  @param conversationCount 通道数
        *  @param DataBuffer        json结构的会话列表
        *
        *  @return 操作结果 true - 成功 false - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool GetConversationList(int[] conversationDict, int conversationCount, ConversationInfoEventHandler callback);

        /**
        *  获取最近的某类信息的会话列表
        *
        *  @param targetId   交互方id
        *  @param categoryId 通道类型
        *  @param result     json结构的会话列表
        *
        *  @return 操作结果 true - 成功 false - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool GetConversation(string targetId, int categoryId, ConversationInfoEventHandler callback);

        /**
        *  获取未读消息数
        *
        *  @return >=0 未读信息条数-客服未读数 -1 数据库未初始化
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetTotalUnreadCount();
        /**
        *  获取未读信息数
        *
        *  @param targetId   交互方id
        *  @param categoryId 通道类型
        *
        *  @return >=0 未读消息数目 -1 数据库未初始化
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetUnreadCount(string targetId, int categoryId);

        /**
        *  获取未读信息数
        *
        *  @param conversationDict  通道类型数组
        *  @param conversationCount 数组元素个数
        *
        *  @return >=0 未读消息数目 -1 数据库未初始化
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetConversationUnreadCount(int[] conversationDict, int conversationCount);

        /**
        *  设置阻止push信息
        *
        *  @param targetId   交互方id
        *  @param categoryId 通道类型
        *  @param block      是否阻止 true - 阻止 false - 取消阻止
        *  @param listener   监听器 推送值：0-未阻止 100-已阻止
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SetConversationNotificationStatus(string targetId, int categoryId, bool block, BizAckListenerEventHandler callback);

        /**
        *  获取阻止状态
        *
        *  @param targetId    交互方id
        *  @param categoryId  通道类型
        *  @param fetchRemote 是否从服务器获取 true - 服务器 false - 本地
        *  @param listener    监听器 推送值：0-未阻止 100-已阻止
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetConversationNotificationStatus(string targetId, int categoryId, BizAckListenerEventHandler callback);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool GetBlockPushSync(string targetId, int categoryId, ref int status);

        /**
        *  获取用户信息
        *
        *  @param userId      用户id
        *  @param listener    监听器 推送：用户id 用户名称 用户url
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetUserInfo(string userId, UserInfoListenerEventHandler callback);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool GetUserInfoExSync(string userId, int category_id, UserInfoEventHandler callback);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ClearConversations(int[] conversationDict, int conversationCount);

        /*
        ************************************************
        *  单条信息处理函数
        ************************************************
        */

        /**
        *  删除消息
        *
        *  @param messageId    消息id数组
        *  @param messageCount 消息数组数目
        *
        *  @return 操作结果：true - 成功 false - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool DeleteMessage(int[] messageId, int messageCount);

        /**
        *  设置消息内容
        *
        *  @param messageId 消息id
        *  @param content   消息内容
        *
        *  @return 操作结果：true - 成功 false - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool SetMessageContent(int messageId, string content);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool SetMessageDisplayText(int messageId, string content);

        /**
        *  设置附加信息
        *
        *  @param messageId    消息id
        *  @param extraMessage 附加信息内容
        *
        *  @return 操作结果：true - 成功 false - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool SetMessageExtra(int messageId, string extraMessage);

        /**
        *  设置消息读取状态
        *
        *  @param messageId  消息id
        *  @param readStatus 消息读取状态 0 - 未读 1 - 已读
        *
        *  @return 操作结果：true - 成功 false - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool SetMessageReadStatus(int messageId, int readStatus);

        /**
        *  设置消息发送状态
        *
        *  @param messageId  消息id
        *  @param readStatus 消息读取状态 10 - 发送中 20 - 发送失败 30 - 发送成功
        *
        *  @return 操作结果：true - 成功 false - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool SetMessageSendStatus(int messageId, int sendStatus);

        /**
        *  获取本地时间与服务器时间的差值
        *
        *  @return 差值 = 本地时间 - 服务器时间
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern System.Int64 GetDeltaTime();

        /*
        ************************************************
        *  文件处理函数
        ************************************************
        */

        /**
        *  上传文件
        *
        *  @param targetId   交互方id
        *  @param categoryId 通道类型
        *  @param nType      媒体类型 1 - Image 2 - Audio 3 - Video
        *  @param pbData     媒体数据
        *  @param nl         数据长度
        *  @param pListener  图片监听器 推送：进度 操作结果：成功 推送网络地址 失败 失败原因
        */
        //////////////////////////////////////////////////////////////////////////////////////////////////////const unsigned char* pbData 主要类型转换

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void UpLoadFile(string targetId, int categoryId, int nType, byte[] pbData/*string data*/, int nl, ImageListenerEventHandler callback, ImageListenerEventHandler process_callback);
        
        /**
        *  下载文件
        *
        *  @param targetId   交互方id
        *  @param categoryId 通道类型
        *  @param nType      媒体类型 1 - Image 2 - Audio 3 - Video
        *  @param pszUrl     媒体网络地址
        *  @param pListener  图片监听器 推送：进度 操作结果：成功 推送网络地址 失败 失败原因
        */
